G_a and G_m should have upright subscripts.

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -31,8 +31,8 @@
 \newcommand\as[2][]{\mathbb A^{#2}_{#1}}        % affine space
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
 \newcommand\Proj{\operatorname{Proj}}           
-\newcommand\Gm{\mathbb{G}_m}                    % G_m
-\newcommand\Ga{\mathbb{G}_a}                    % G_a
+\newcommand\Gm{\mathbb{G}_{\mathrm{m}}}         % G_m
+\newcommand\Ga{\mathbb{G}_{\mathrm{a}}}         % G_a
 
 \newcommand\Grass[2]{\operatorname{Grass}(#1,#2)}   % Grassmannian
 
