Move ind-coherent sheaves to math-ag.

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -24,6 +24,7 @@
 \newcommand\catAbPresheaves[1]{\cat{PreAb}(#1)}   % category of Abelian presheaves
 \newcommand\catCoh[2][]{\cat{Coh}^{#1}(#2)}     % category of coherent sheaves
 \newcommand\catQCoh[2][]{\cat{QCoh}^{#1}(#2)}   % category of quasicoherent sheaves
+\newcommand\catIndCoh[2][]{\cat{IndCoh}_{#1}(#2)} % category of ind-coherent sheaves
 \newcommand\catPerf[1]{\cat{Perf}(#1)}          % category of perfect sheaves
 \newcommand\catSing[1]{\cat{Sing}(#1)}          % singularity category of a space
 \newcommand\catDMod[2][]{\cat{DMod}_{#1}(#2)}   % category of D-modules
