--- a/math-alg.sty
+++ b/math-alg.sty
@@ -1,9 +1,13 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{math-alg}[2014/09/09 Useful commands for writing texts about algebra in general]
 \RequirePackage{math-general}
+\RequirePackage{xparse}
 
 % categories
-\newcommand\catModules[1]{#1\text{-}\cat{Mod}}      % modules
+\NewDocumentCommand \catModules {O{} O{} m} {       % modules
+    \cat{Mod}^{#1}_{#2}(#3)
+}
+\newcommand\catModulesFG[2][]{\catModules[\mathrm{f.g.}][#1]{#2}} % finitely generated modules
 \newcommand\catCoModules[1]{#1\text{-}\cat{coMod}}  % comodules
 \newcommand\catRep[1]{#1\text{-}\cat{Rep}}          % representations
 \newcommand\catAlg[1]{\cat{Alg}_{#1}}               % algebras
