Missing \setminus character.

--- a/ck-article.cls
+++ b/ck-article.cls
@@ -277,4 +277,5 @@
 % Characters that do not exist is TeX Gyre Termes Math
 \AtBeginDocument{
 	\def\similarrightarrow{\xrightarrow{\sim}}
+	\def\setminus{-}
 }
