loop space, de Rham global sections and shriek-tensor.

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -41,6 +41,8 @@
 
 \newcommand\Sym[2]{\operatorname{Sym}^{#1}#2}   % symmetric product
 
+\newcommand\ls{\mathcal L}                      % loop space
+
 % algebraic groups
 \renewcommand\GL[2][]{\operatorname{GL}_#2\ifx#1\@empty\else(#1)\fi}
 \renewcommand\SL[2][]{\operatorname{SL}_#2\ifx#1\@empty\else(#1)\fi}
@@ -50,6 +52,8 @@
 
 % cohomology
 \newcommand\cech\check
+\newcommand\ΓdR{Γ_{\mkern-4mu\mathrm{ren-dR}}}
+\newcommand\ΓrendR{Γ_{\mkern-4mu\mathrm{ren-dR}}}
 
 % perverse sheaves
 \newcommand\perv[1][p]{\mkern1mu{}^{#1}\mkern-3mu}
