--- a/math-ag.sty
+++ b/math-ag.sty
@@ -52,7 +52,7 @@
 
 % cohomology
 \newcommand\cech\check
-\newcommand\ΓdR{Γ_{\mkern-4mu\mathrm{ren-dR}}}
+\newcommand\ΓdR{Γ_{\mkern-4mu\mathrm{dR}}}
 \newcommand\ΓrendR{Γ_{\mkern-4mu\mathrm{ren-dR}}}
 
 % perverse sheaves
