some more definitions

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -28,6 +28,7 @@
 \newcommand\catPerf[1]{\cat{Perf}(#1)}          % category of perfect sheaves
 \newcommand\catSing[1]{\cat{Sing}(#1)}          % singularity category of a space
 \newcommand\catDMod[2][]{\cat{DMod}_{#1}(#2)}   % category of D-modules
+\newcommand\catDModHol[1]{\catDMod[\mathup{hol}]{#1}}   % holonomic D-modules
 
 \newcommand\as[2][]{\mathbb A^{#2}_{#1}}        % affine space
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
