--- a/math-general.sty
+++ b/math-general.sty
@@ -26,6 +26,8 @@
 \newcommand\res[2]{\mathchoice{\left.#1\right|_{#2}}{#1|_{#2}}{#1|_{#2}}{#1|_{#2}}}
 
 \def\tensor{\otimes}                % tensor product
+\newcommand\shriektensor{\mathbin{\tensor\limits^!}}
+\newcommand\startensor{\mathbin{\tensor\limits^*}}
 \def\cotimes{\amalg}
 
 % arrows
