--- a/classes.dtx
+++ b/classes.dtx
@@ -229,7 +229,7 @@ version 2005/12/01 or later.
 %    \end{macrocode}
 % List environments.
 %    \begin{macrocode}
-\RequirePackage{enumitem}
+\RequirePackage[shortlabels]{enumitem}
 \setlist[enumerate,1]{label=(\roman*)}
 \setlist[enumerate,2]{label=(\alph*)}
 \setlist[enumerate,3]{label=(\Alph*)}
