--- a/ck-article.cls
+++ b/ck-article.cls
@@ -1,6 +1,6 @@
 \NeedsTeXFormat{LaTeX2e}[1999/12/01]
-\ProvidesClass{thesis}
-   [2015/05/20 v0
+\ProvidesClass{ck-article}
+   [2016/01/04 v0
       A class for my articles and notes
    ]
 \LoadClassWithOptions{scrartcl}
@@ -10,6 +10,7 @@
 
 \newif\ifbw
 \newif\iffinal
+\newif\ifnumberinsections
 
 \IfEndWith{\jobname}{\detokenize{-bw}}{\bwtrue}{}
 
@@ -19,6 +20,10 @@
 
 \DeclareOption{final}{
     \finaltrue
+}
+
+\DeclareOption{number-in-sections}{
+    \numberinsectionstrue
 }
 
 \ProcessOptions\relax
@@ -201,7 +206,11 @@
 \RequirePackage{bookmark}
 
 \theoremstyle{plain}
-\newtheorem{Thm}{Theorem}
+\ifnumberinsections
+	\newtheorem{Thm}{Theorem}[section]
+\else
+	\newtheorem{Thm}{Theorem}
+\fi
 \newtheorem{Fact}[Thm]{Fact}
 \newtheorem{Claim}[Thm]{Claim}
 \newtheorem{Prop}[Thm]{Proposition}
