unicode-math doesn't like greek macro names anymore.

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -53,8 +53,8 @@
 
 % cohomology
 \newcommand\cech\check
-\newcommand\ΓdR{Γ_{\mkern-4mu\mathrm{dR}}}
-\newcommand\ΓrendR{Γ_{\mkern-4mu\mathrm{ren-dR}}}
+\newcommand\GdR{Γ_{\mkern-4mu\mathrm{dR}}}
+\newcommand\GrendR{Γ_{\mkern-4mu\mathrm{ren-dR}}}
 
 % perverse sheaves
 \newcommand\perv[1][p]{\mkern1mu{}^{#1}\mkern-3mu}
