--- a/math-ca.sty
+++ b/math-ca.sty
@@ -7,6 +7,7 @@
 % ideals
 \newcommand\ideal\mathfrak
 \DeclareMathOperator\Spec{Spec}
+\DeclareMathOperator\maxSpec{maxSpec}
 
 \newcommand\rad{\sqrt}              % radical of an ideal
 
