--- a/math-ag.sty
+++ b/math-ag.sty
@@ -29,6 +29,7 @@
 \newcommand\catSing[1]{\cat{Sing}(#1)}          % singularity category of a space
 \newcommand\catDMod[2][]{\cat{DMod}_{#1}(#2)}   % category of D-modules
 \newcommand\catDModHol[1]{\catDMod[\mathup{hol}]{#1}}   % holonomic D-modules
+\newcommand\catDbCoh[1]{\cat D^b\catCoh{1}}     % bounded derived category of coherent sheaves
 
 \newcommand\as[2][]{\mathbb A^{#2}_{#1}}        % affine space
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
