--- a/math-ag.sty
+++ b/math-ag.sty
@@ -6,9 +6,10 @@
 
 % sheaves
 \renewcommand\O{\sheaf O}
-\newcommand\sheafHom{\sheaf{H\mkern-2mu o\mkern-0.8mu m}}
+\newcommand\sheafHom{\sheaf{H\mkern-1.2mu o\mkern-2.1mu m}}
 \let\shHom\sheafHom                             % depreciated
 \newcommand\sheafEnd{\sheaf{E\mkern-1.2mu n\mkern-2mu d}}
+\newcommand\sheafExt{\sheaf{E\mkern-1.2mu x\mkern-0.8mu t}}
 \newcommand\sheafify[1]{#1^a}                   % sheafification
 
 
