--- a/math-ag.sty
+++ b/math-ag.sty
@@ -30,7 +30,8 @@
 \newcommand\catSing[1]{\cat{Sing}(#1)}          % singularity category of a space
 \newcommand\catDMod[2][]{\cat{DMod}_{#1}(#2)}   % category of D-modules
 \newcommand\catDModHol[1]{\catDMod[\mathup{hol}]{#1}}   % holonomic D-modules
-\newcommand\catDbCoh[1]{\cat D^b\catCoh{#1}}     % bounded derived category of coherent sheaves
+\newcommand\catDbCoh[1]{\cat D^b\catCoh{#1}}    % bounded derived category of coherent sheaves
+\newcommand\catDCoh[2][]{\cat D^{#1}\catCoh{#2}}  % derived category of coherent sheaves
 \newcommand\catDQCoh[2][]{\cat D^{#1}\catQCoh{#2}}     % derived category of quasi-coherent sheaves
 
 \newcommand\as[2][]{\mathbb A^{#2}_{#1}}        % affine space
