Add required package.

--- a/math-general.sty
+++ b/math-general.sty
@@ -2,6 +2,7 @@
 \ProvidesPackage{math-general}[2014/04/15 Useful commands for writing texts about mathematics]
 
 % Normalize Greek letters
+\RequirePackage{newunicodechar}
 \newunicodechar{ϱ}{ρ}
 \newunicodechar{ϑ}{θ}
 \newunicodechar{ϕ}{φ}
