Notation for basic sets.

--- a/math-general.sty
+++ b/math-general.sty
@@ -7,6 +7,13 @@
 \newunicodechar{ϑ}{θ}
 \newunicodechar{ϕ}{φ}
 
+% Basic sets
+\newcommand\NN{{\mathbb{N}}}
+\newcommand\ZZ{{\mathbb{Z}}}
+\newcommand\QQ{{\mathbb{Q}}}
+\newcommand\RR{{\mathbb{R}}}
+\newcommand\CC{{\mathbb{C}}}
+
 % constants
 \renewcommand\i{\mathfrak i}        % imaginary unit (was dot-less i)
 \newcommand\e{\mathrm e}
