--- a/math-ag.sty
+++ b/math-ag.sty
@@ -6,6 +6,8 @@
 
 % sheaves
 \renewcommand\O{\sheaf O}
+\newcommand\sO{\sheaf O}                        % structure sheaf
+\newcommand\sD{\sheaf D}                        % sheaf of differential operators
 \newcommand\sheafHom{\sheaf{H\mkern-1.2mu o\mkern-2.1mu m}}
 \let\shHom\sheafHom                             % depreciated
 \newcommand\sheafEnd{\sheaf{E\mkern-1.2mu n\mkern-2mu d}}
