Update scrpage reference.

--- a/classes.dtx
+++ b/classes.dtx
@@ -188,7 +188,7 @@ version 2005/12/01 or later.
 %
 % The KOMA package for setting up the page header and footer.
 %    \begin{macrocode}
-\RequirePackage{scrpage2}
+\RequirePackage{scrlayer-scrpage}
 %    \end{macrocode}
 %
 % The \AMS-math bundle and \texttt{thmtools} for specifying theorem environments.
@@ -312,7 +312,7 @@ version 2005/12/01 or later.
 ]{Liberation Mono}
 
 \def\ck@mathfont{XITS Math}
-\setmathfont{xits-math.otf}
+\setmathfont{XITS Math}
 %    \end{macrocode}
 % 
 % \section{Sectioning}
